--- a/conversions/ui/src/app/app.component.html
+++ b/conversions/ui/src/app/app.component.html
@@ -315,7 +315,7 @@
 		  </tr>
 		  <tr>
 			<td>Square Kilometer/s to Square Mile/s:</td>
-			<td><input name = "squarekilometers" type = "text" ng-model = "squarekilometers" required></td>
+			<td><input name = "squarekilometers" type = "text" value="1" ng-model = "squarekilometers" required></td>
 			<td>
 				<button>
 				  Convert
@@ -327,7 +327,7 @@
 		  </tr>
 		  <tr>
 			<td>Square Mile/s to Square Kilometer/s:</td>
-			<td><input name = "squaremiles" type = "text" ng-model = "squaremiles" required></td>
+			<td><input name = "squaremiles" type = "text" value="1" ng-model = "squaremiles" required></td>
 			<td>
 				<button>
 				  Convert
@@ -344,7 +344,7 @@
 		  </tr>
 		  <tr>
 			<td>Kilometer/s to Mile/s:</td>
-			<td><input name = "kilometers" type = "text" ng-model = "kilometers" required></td>
+			<td><input name = "kilometers" type = "text" value="1" ng-model = "kilometers" required></td>
 			<td>
 				<button>
 				  Convert
@@ -356,7 +356,7 @@
 		  </tr>
 		  <tr>
 			<td>Mile/s to Kilometer/s:</td>
-			<td><input name = "miles" type = "text" ng-model = "miles" required></td>
+			<td><input name = "miles" type = "text" value="1" ng-model = "miles" required></td>
 			<td>
 				<button>
 				  Convert
@@ -373,7 +373,7 @@
 		  </tr>
 		  <tr>
 			<td>Kilgram/s to Pound/s:</td>
-			<td><input name = "kilograms" type = "text" ng-model = "kilograms" required></td>
+			<td><input name = "kilograms" type = "text" value="1" ng-model = "kilograms" required></td>
 			<td>
 				<button>
 				  Convert
@@ -385,7 +385,7 @@
 		  </tr>
 		  <tr>
 			<td>Pound/s to Kilgram/s:</td>
-			<td><input name = "pounds" type = "text" ng-model = "pounds" required></td>
+			<td><input name = "pounds" type = "text" value="1" ng-model = "pounds" required></td>
 			<td>
 				<button>
 				  Convert
@@ -402,7 +402,7 @@
 		  </tr>
 		  <tr>
 			<td>Celsius to Kelvin:</td>
-			<td><input name = "celsius" type = "text" ng-model = "celsius" required></td>
+			<td><input name = "celsius" type = "text" value="0" ng-model = "celsius" required></td>
 			<td>
 				<button>
 				  Convert
@@ -414,7 +414,7 @@
 		  </tr>
 		  <tr>
 			<td>Kelvin to Celsius:</td>
-			<td><input name = "kelvin" type = "text" ng-model = "kelvin" required></td>
+			<td><input name = "kelvin" type = "text" value="0" ng-model = "kelvin" required></td>
 			<td>
 				<button>
 				  Convert
@@ -431,7 +431,7 @@
 		  </tr>
 		  <tr>
 			<td>Milliliter/s to Liter/s:</td>
-			<td><input name = "milliliters" type = "text" ng-model = "milliliters" required></td>
+			<td><input name = "milliliters" type = "text" value="1" ng-model = "milliliters" required></td>
 			<td>
 				<button>
 				  Convert
@@ -443,7 +443,7 @@
 		  </tr>
 		  <tr>
 			<td>Liter/s to Milliliter/s:</td>
-			<td><input name = "liters" type = "text" ng-model = "liters" required></td>
+			<td><input name = "liters" type = "text" value="1" ng-model = "liters" required></td>
 			<td>
 				<button>
 				  Convert
